Add applications to the main dyn ref pages

--- a/dyn/ref.html
+++ b/dyn/ref.html
@@ -88,11 +88,23 @@
                 <li><a href="rep.html">Kinetics of point masses</a></li>
                 <li><a href="reg.html">Kinetics of rigid bodies</a></li>
                 <li><a href="rem.html">Moments of inertia</a></li>
-                <li>Free body diagrams</li>
+                <li><a href="rfb.html">Free body diagrams</a></li>
                 <li>Accelerating coordinate frames</li>
                 <li><a href="ren.html">Energy and work</a></li>
                 <li><a href="rec.html">Momentum, impulse, and collisions</a></li>
                 <li><a href="rfr.html">Friction and damping</a></li>
+              </ol>
+            </li>
+            <li><b>Applications</b>
+              <ol>
+                <li><a href="aos.html">Shortest flight paths</a></li>
+                <li><a href="aov.html">Celestical velocities</a></li>
+                <li><a href="ava.html">Accelerating and braking</a></li>
+                <li><a href="avt.html">Track transition curves</a></li>
+                <li><a href="avb.html">Banked turns</a></li>
+                <li><a href="avs.html">Steering geometry</a></li>
+                <li><a href="aml.html">Four-bar linkages</a></li>
+                <li><a href="afp.html">Projectiles with air resistance</a></li>
               </ol>
             </li>
           </ol>
