--- a/nav.html
+++ b/nav.html
@@ -57,7 +57,7 @@
 								<li><a href="/dyn/rep.html">Kinetics of point masses</a></li>
 								<li><a href="/dyn/reg.html">Kinetics of rigid bodies</a></li>
 								<li><a href="/dyn/rem.html">Moments of inertia</a></li>
-								<li><a href="#">Free body diagrams</a></li>
+								<li><a href="/dyn/rfb.html">Free body diagrams</a></li>
 								<li><a href="#">Accelerating coordinate frames</a></li>
 								<li><a href="/dyn/ren.html">Energy and work</a></li>
 								<li><a href="/dyn/rec.html">Momentum, impulse, and collisions</a></li>
@@ -76,7 +76,7 @@
 								</ul>
 								<span class="arrow">&#8250;</span>
 							</li>
-							<li><a href="">Vehicle /dynamics</a>
+							<li><a href="">Vehicle Dynamics</a>
 								<!-- Third Tier Drop Down -->
 								<ul>
 									<li><a href="/dyn/ava.html">Accelerating and braking</a></li>
