--- a/dyn/rkc.html
+++ b/dyn/rkc.html
@@ -51,14 +51,14 @@
 
             <div class="mainBlock">
         <div class="contentBlock">
-            <div id="rec" class="contentCol">
+            <div id="rkc" class="contentCol">
                 <h1>
                     Constraints and constrainted motions
                 </h1>
             </div>
         </div>
         <div class="contentBlock">
-            <div id="rec-c" class="contentCol">
+            <div id="rkc-c" class="contentCol">
                 <h1>
                     Constraints
                 </h1>
@@ -332,7 +332,7 @@
             </div>
         </div>
         <div class="contentBlock">
-            <div id="rec-f" class="contentCol">
+            <div id="rkc-f" class="contentCol">
                 <h1>
                     Constraint forces
                 </h1>
