Remove collapsing/floating menus

--- a/dyn/rfb.html
+++ b/dyn/rfb.html
@@ -382,16 +382,32 @@
                     </canvas>
                     <p class="controls">
                         <button class="option-toggle:rfb-it-c:cut">cut</button>
+                        Click and drag the point to move it along the length of the rod
+                    </p>
+                    <table>
                         <td>Force:</td>
                         <td><input type="radio" name="rfb-it-c-forces" value="tension" class="data-input:rfb-it-c:forces" />tension</td>
                         <td><input type="radio" name="rfb-it-c-forces" value="compression" class="data-input:rfb-it-c:forces" />compression</td>
+                    </table>
+                </div>
+                <p>
+                    If we now examine an L-shaped two-force member, and cut at an arbitrary point along its length, we will find that the internal force shown earlier
+                    in the horizontal rod is not enough to maintain equilibrium, as the two rigid-bodies resulting from the cut can also now rotate. Therefore, there must be 
+                    an internal moment that prevents the rotation. This also makes sense as two-dimensional rigid bodies have 3 degrees of freedom. Two in translation,
+                    and one in rotation.
+                </p>
+                <div class="figureContainer width600">
+                    <canvas id="rfb-it-b" width="600" height="800" class="figureImage">
+                    </canvas>
+                    <p class="controls">
+                        <button class="option-toggle:rfb-it-b:cut">cut</button>
+                        <button class="option-toggle:rfb-it-b:components">components</button>
+                        Click and drag the point to move it along the length of the rod
                     </p>
                     <table>
-                        <tr>
-                            <td>At:</td>
-                            <td><input type="range" min="0.2" max="0.8" value="0.5" step="0.1" class="data-input:rfb-it-c:k"/>
-                                $kL = $<span class="data-option:rfb-it-c:k"></span>$L$</td>
-                        </tr>
+                        <td>Force:</td>
+                        <td><input type="radio" name="rfb-it-b-forces" value="tension" class="data-input:rfb-it-b:forces" />tension</td>
+                        <td><input type="radio" name="rfb-it-b-forces" value="compression" class="data-input:rfb-it-b:forces" />compression</td>
                     </table>
                 </div>
             </div>
